Added JSHint plug-in into build lifecylce

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/pom.xml
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/pom.xml
@@ -71,6 +71,7 @@
                 <version>1.6.0</version>
                 <executions>
                     <execution>
+                       <phase>process-sources</phase>
                         <goals>
                             <goal>lint</goal>
                         </goals>
