--- a/pom.xml
+++ b/pom.xml
@@ -234,13 +234,13 @@
             </dependency>
             <dependency>
                 <groupId>org.wso2.carbon.uuf.common</groupId>
-                <artifactId>org.wso2.carbon.uuf.common.foundation</artifactId>
+                <artifactId>org.wso2.carbon.uuf.common.foundation.ui</artifactId>
                 <version>${carbon.uuf.common.version}</version>
                 <type>zip</type>
             </dependency>
             <dependency>
                 <groupId>org.wso2.carbon.uuf.common</groupId>
-                <artifactId>org.wso2.carbon.uuf.common.theme.default</artifactId>
+                <artifactId>org.wso2.carbon.uuf.common.default.theme</artifactId>
                 <version>${carbon.uuf.common.version}</version>
                 <type>zip</type>
             </dependency>
