--- a/pom.xml
+++ b/pom.xml
@@ -234,13 +234,13 @@
             </dependency>
             <dependency>
                 <groupId>org.wso2.carbon.uuf.common</groupId>
-                <artifactId>org.wso2.carbon.uuf.common.foundation</artifactId>
+                <artifactId>org.wso2.carbon.uuf.common.foundation.ui</artifactId>
                 <version>${carbon.uuf.common.version}</version>
                 <type>zip</type>
             </dependency>
             <dependency>
                 <groupId>org.wso2.carbon.uuf.common</groupId>
-                <artifactId>org.wso2.carbon.uuf.common.theme.default</artifactId>
+                <artifactId>org.wso2.carbon.uuf.common.default.theme</artifactId>
                 <version>${carbon.uuf.common.version}</version>
                 <type>zip</type>
             </dependency>
@@ -780,15 +780,15 @@
         <project.scm.id>wso2-scm-server</project.scm.id>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <carbon.security.userstore.jdbc.version>0.1.1</carbon.security.userstore.jdbc.version>
-        <org.wso2.carbon.identity.mgt.version>0.1.1</org.wso2.carbon.identity.mgt.version>
+        <org.wso2.carbon.identity.mgt.version>0.1.2-SNAPSHOT</org.wso2.carbon.identity.mgt.version>
         <carbon.osgi.test.util.version>5.1.0</carbon.osgi.test.util.version>
-        <org.wso2.carbon.identity.recovery.server.feature.version>0.1.1</org.wso2.carbon.identity.recovery.server.feature.version>
+        <org.wso2.carbon.identity.recovery.server.feature.version>0.1.2-SNAPSHOT</org.wso2.carbon.identity.recovery.server.feature.version>
         <org.wso2.carbon.identity.commons.feature.version>0.1.3</org.wso2.carbon.identity.commons.feature.version>
         <org.wso2.carbon.identity.commons.version>0.1.3</org.wso2.carbon.identity.commons.version>
 
-        <carbon.uuf.version>1.0.0-m10</carbon.uuf.version>
-        <carbon-uuf-maven-plugin.version>1.0.0-m10</carbon-uuf-maven-plugin.version>
-        <carbon.uuf.common.version>1.0.0-m1</carbon.uuf.common.version>
+        <carbon.uuf.version>1.0.0-m12</carbon.uuf.version>
+        <carbon-uuf-maven-plugin.version>1.0.0-m11</carbon-uuf-maven-plugin.version>
+        <carbon.uuf.common.version>1.0.0-m3</carbon.uuf.common.version>
         <carbon.security.version>1.0.0</carbon.security.version>
         <carbon.metrics.version>2.0.0</carbon.metrics.version>
 
