Refactoring and adding custom error page for 500

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/app.yaml
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/app.yaml
@@ -47,6 +47,7 @@ menus :
 errorPages:
   404: "/foundation/error/404"
   401: "/login"
+  500: "/error"
   default: "/foundation/error/default"
 
 loginPageUri: "/login"
