--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/app.yaml
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/app.yaml
@@ -47,7 +47,7 @@ menus :
 errorPages:
   404: "/foundation/error/404"
   401: "/login"
-  500: "/error"
+  500: "/error/custom"
   default: "/foundation/error/default"
 
 loginPageUri: "/login"
