--- a/product/pom.xml
+++ b/product/pom.xml
@@ -92,11 +92,6 @@
             <type>zip</type>
         </dependency>
         <dependency>
-            <groupId>org.wso2.carbon.identity.inbound.provisioning.scim2</groupId>
-            <artifactId>org.wso2.carbon.identity.inbound.provisioning.scim2.common.feature</artifactId>
-            <type>zip</type>
-        </dependency>
-        <dependency>
             <groupId>org.wso2.carbon.security.caas</groupId>
             <artifactId>org.wso2.carbon.security.caas.feature</artifactId>
             <type>zip</type>
@@ -277,6 +272,12 @@
                                     </outputDirectory>
                                     <includes>**/h2.sql</includes>
                                 </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.wso2.carbon.identity.mgt</groupId>
+                                    <artifactId>org.wso2.carbon.identity.claim.feature</artifactId>
+                                    <version>${org.wso2.carbon.identity.mgt.version}</version>
+                                    <type>zip</type>
+                                </artifactItem>
                             </artifactItems>
                         </configuration>
                     </execution>
@@ -399,10 +400,6 @@
                                 <feature>
                                     <id>org.wso2.carbon.security.caas.feature</id>
                                     <version>${carbon.security.version}</version>
-                                </feature>
-                                <feature>
-                                    <id>org.wso2.carbon.identity.inbound.provisioning.scim2.common.feature</id>
-                                    <version>${org.wso2.carbon.identity.inbound.provisioning.scim2.version}</version>
                                 </feature>
                                 <!-- Sample Applications -->
                                 <!--<feature>-->
@@ -564,10 +561,6 @@
                                 <feature>
                                     <id>org.wso2.carbon.security.caas.feature</id>
                                     <version>${carbon.security.version}</version>
-                                </feature>
-                                <feature>
-                                    <id>org.wso2.carbon.identity.inbound.provisioning.scim2.common.feature</id>
-                                    <version>${org.wso2.carbon.identity.inbound.provisioning.scim2.version}</version>
                                 </feature>
                                 <!--<feature>-->
                                     <!--<id>org.wso2.carbon.uuf.Features-app.feature.group</id>-->
