--- a/pom.xml
+++ b/pom.xml
@@ -734,6 +734,48 @@
                 <version>${carbon.uuf.version}</version>
                 <type>zip</type>
             </dependency>
+
+
+
+            <dependency>
+                <groupId>org.wso2.carbon.identity.gateway</groupId>
+                <artifactId>org.wso2.carbon.identity.gateway.feature</artifactId>
+                <version>${org.wso2.carbon.identity.gateway.feature.version}</version>
+                <type>zip</type>
+            </dependency>
+
+            <dependency>
+                <groupId>org.wso2.carbon.identity.gateway</groupId>
+                <artifactId>org.wso2.carbon.identity.gateway.resource.feature</artifactId>
+                <version>${org.wso2.carbon.identity.gateway.resource.feature.version}</version>
+                <type>zip</type>
+            </dependency>
+
+
+
+            <dependency>
+                <groupId>org.wso2.carbon.identity.gateway</groupId>
+                <artifactId>org.wso2.carbon.identity.gateway.common</artifactId>
+                <version>${org.wso2.carbon.identity.gateway.common.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon.identity.gateway</groupId>
+                <artifactId>org.wso2.carbon.identity.gateway.api</artifactId>
+                <version>${org.wso2.carbon.identity.gateway.api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon.identity.gateway</groupId>
+                <artifactId>org.wso2.carbon.identity.gateway</artifactId>
+                <version>${org.wso2.carbon.identity.gateway.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon.identity.gateway</groupId>
+                <artifactId>org.wso2.carbon.identity.gateway.resource</artifactId>
+                <version>${org.wso2.carbon.identity.gateway.resource.version}</version>
+            </dependency>
+
+
+
         </dependencies>
     </dependencyManagement>
 
@@ -783,8 +825,8 @@
         <org.wso2.carbon.identity.mgt.version>0.1.1</org.wso2.carbon.identity.mgt.version>
         <carbon.osgi.test.util.version>5.1.0</carbon.osgi.test.util.version>
         <org.wso2.carbon.identity.recovery.server.feature.version>0.1.1</org.wso2.carbon.identity.recovery.server.feature.version>
-        <org.wso2.carbon.identity.commons.feature.version>0.1.3</org.wso2.carbon.identity.commons.feature.version>
-        <org.wso2.carbon.identity.commons.version>0.1.3</org.wso2.carbon.identity.commons.version>
+        <org.wso2.carbon.identity.commons.feature.version>0.1.10</org.wso2.carbon.identity.commons.feature.version>
+        <org.wso2.carbon.identity.commons.version>0.1.10</org.wso2.carbon.identity.commons.version>
 
         <carbon.uuf.version>1.0.0-m10</carbon.uuf.version>
         <carbon-uuf-maven-plugin.version>1.0.0-m10</carbon-uuf-maven-plugin.version>
@@ -901,6 +943,16 @@
         <axiom.wso2.version>1.2.11.wso2v10</axiom.wso2.version>
 
         <javax.ws.rs.import.version.range>[2.0.0, 3.0.0)</javax.ws.rs.import.version.range>
+
+
+
+        <org.wso2.carbon.identity.gateway.version>1.0.0-SNAPSHOT</org.wso2.carbon.identity.gateway.version>
+        <org.wso2.carbon.identity.gateway.api.version>1.0.0-SNAPSHOT</org.wso2.carbon.identity.gateway.api.version>
+        <org.wso2.carbon.identity.gateway.common.version>1.0.0-SNAPSHOT</org.wso2.carbon.identity.gateway.common.version>
+        <org.wso2.carbon.identity.gateway.resource.version>1.0.0-SNAPSHOT</org.wso2.carbon.identity.gateway.resource.version>
+
+        <org.wso2.carbon.identity.gateway.feature.version>1.0.0-SNAPSHOT</org.wso2.carbon.identity.gateway.feature.version>
+        <org.wso2.carbon.identity.gateway.resource.feature.version>1.0.0-SNAPSHOT</org.wso2.carbon.identity.gateway.resource.feature.version>
 
     </properties>
 
